# itoy-OTA-MOGU

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  device_state.h  idf_component.yml  main.cc  ota.cc  power_control.cc  power_control.h  stepper_motor.cc  stepper_motor.h
main/boards/common/: board.cc  board.h  wifi_board.cc  wifi_board.h  wifi_provisioning_ble.cc  wifi_provisioning_ble.h
main/boards/itoy-mogu/: CONTROL_LOGIC.md  config.h  config.json  imu_qmi8658a.cc  imu_qmi8658a.h  itoy-v1.0.cc  mood_controller.cc  mood_controller.h  motor_control.cc  motor_control.h  power_control.cc  power_control.h  rgb_led.cc  rgb_led.h  touch_pad.cc  touch_pad.h
